--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,42 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    margin:0px;
+    padding: 0px;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body, #root, .App {
+    height: 100%;
+}
+.App {
+    height: 100vh;
+    margin: 120px 24px;
+    background-color: red;
+}
+.searchbar, .searchItems {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.searchbar {
+    background-color: green;
+}
+.image {
+    width: 30px;
+    height: 30px;
+}
+.description {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 12px;
+}
+h1 {
+    font-size: 15px;
+}
+.skillbox {
+    background-color: burlywood;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+.skillbox span {
+    border: 2px yellow solid;
 }
