--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body, #root, .App {
     height: 100%;
 }
 .App {
-    height: 100vh;
+    height: 100%;
     margin: 120px 24px;
     background-color: red;
 }
